Refactored code to comply with pylint naming conventions

--- a/FastAPI/requirements.txt
+++ b/FastAPI/requirements.txt
@@ -53,3 +53,8 @@ python-dotenv==1.0.1
 
 # Data validation and settings management using Python type hints; includes email validators.
 pydantic[email]==2.5.3
+
+# --- FORM HANDLING ---
+
+# Required for handling form data in FastAPI, including file uploads and form submissions
+python-multipart==0.0.20
